# TrieMap

./: BSTrieBench.hs  Benchmark.hs  LICENSE  Makefile  SetBench.hs  Tests.hs  TrieBench.hs  TrieMap.cabal  bench-OldTrieBench.csv
Bench/: Benchmark.hs  dictionary.txt
Control/Monad/: Ends.hs  Lookup.hs  Option.hs
Data/: TrieMap.hs  TrieSet.hs
Data/Functor/: Immoral.hs
Data/TrieMap/: Applicative.hs  Arbitrary.hs  Buildable.hs  Class.hs  IndexedHole.hs  IntMap.hs  Key.hs  Modifiers.hs  OrdMap.hs  ProdMap.hs  Projection.hs  RadixTrie.hs  Representation.hs  ReverseMap.hs  Search.hs  SetOp.hs  Sized.hs  Subset.hs  Tests.hs  TrieKey.hs  UnionMap.hs  UnitMap.hs  Utils.hs  WordMap.hs
Data/TrieMap/Class/: Instances.hs
Data/TrieMap/OrdMap/: Alternatable.hs  Base.hs  Buildable.hs  Indexable.hs  Projection.hs  Searchable.hs  SetOp.hs  Splittable.hs  Subset.hs  Tests.hs  Traversable.hs  Zippable.hs
Data/TrieMap/ProdMap/: Base.hs  Buildable.hs  Indexable.hs  Searchable.hs  SetOp.hs  Splittable.hs  Tests.hs  Traversable.hs  Zippable.hs
Data/TrieMap/RadixTrie/: Alternate.hs  Base.hs  Build.hs  Edge.hs  Index.hs  Label.hs  Project.hs  Search.hs  SetOp.hs  Slice.hs  Split.hs  Subset.hs  Tests.hs  Traversable.hs  Zipper.hs
Data/TrieMap/Representation/: Class.hs  Instances.hs  TH.hs  Tests.hs
Data/TrieMap/Representation/Instances/: Basic.hs  ByteString.hs  Foreign.hs  Prim.hs  Tests.hs  Vectors.hs
Data/TrieMap/Representation/Instances/ByteString/: Tests.hs
Data/TrieMap/Representation/Instances/Foreign/: Tests.hs
Data/TrieMap/Representation/Instances/Prim/: Bool.hs  Tests.hs
Data/TrieMap/Representation/Instances/Vectors/: Tests.hs
Data/TrieMap/Representation/TH/: Factorized.hs  ReprMonad.hs  Representation.hs  Tests.hs  Utils.hs
Data/TrieMap/ReverseMap/: Tests.hs
Data/TrieMap/TrieKey/: Alternatable.hs  Buildable.hs  Indexable.hs  IndexedHole.hs  Projection.hs  Search.hs  Searchable.hs  SetOp.hs  Splittable.hs  Subset.hs  Tests.hs  Zippable.hs
Data/TrieMap/TrieKey/Buildable/: Tests.hs
Data/TrieMap/TrieKey/Projection/: Tests.hs
Data/TrieMap/TrieKey/SetOp/: Tests.hs
Data/TrieMap/TrieKey/Subset/: Tests.hs
Data/TrieMap/TrieKey/Tests/: Utils.hs
Data/TrieMap/UnionMap/: Alternatable.hs  Base.hs  Buildable.hs  Indexable.hs  Projection.hs  Searchable.hs  SetOp.hs  Splittable.hs  Subset.hs  Tests.hs  Traversable.hs  Zippable.hs
Data/TrieMap/UnitMap/: Tests.hs
Data/TrieMap/WordMap/: Alternatable.hs  Base.hs  Buildable.hs  Indexable.hs  Projection.hs  Searchable.hs  SetOp.hs  Splittable.hs  Subset.hs  Tests.hs  Traversable.hs  Zippable.hs
Data/Vector/: Build.hs
IntBench/: Base.hs  IntSet.hs  Set.hs  Trie.hs
